fix chatbox style on mobile

--- a/src/home/ChatBox.scss
+++ b/src/home/ChatBox.scss
@@ -17,10 +17,10 @@ $clr-bg: #5771f3;
 
 @media only screen and (max-width : 550px) {
     .chatbox-container{
-        width: 200px !important;
+        width: 350px !important;
         height: 300px !important;
-        width: 100vw !important;
-        height: 100vh !important;
+        // width: 100vw !important;
+        // height: 100vh !important;
     }
     .show{
         left: 80% !important;
